Modified general.scss to fix links not wrapping on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,7 +59,8 @@ code, pre {
 a {
   color: #FE4A49;
   text-decoration: none;
-  border-bottom: 2px dotted lightgray; }
+  border-bottom: 2px dotted lightgray;
+  word-wrap: break-word; }
   a:hover {
     text-decoration: none;
     border-bottom: 2px solid #FE4A49;
